--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,4 +1,4 @@
-<footer class="page-footer grey darken-3">
+<footer class="page-footer indigo darken-1">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
@@ -16,7 +16,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-      © 2017 StoryBooks
+      © 2017 StoryBooks Alex Manoliu
       <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
     </div>
   </div>
