--- a/views/stories/add.handlebars
+++ b/views/stories/add.handlebars
@@ -33,6 +33,6 @@
       </div>
     </div>
 
-    <input type="submit" value="Save" class="btn">
+    <input type="submit" value="save" class="btn">
   </form>
 </div>
