--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -3,7 +3,7 @@
       <h3>{{story.title}}</h3>
      <div class="card story">
      <div class="card-content">
- <span class="card-title">{{story.date}}</span>
+ <span class="card-title">{{formatDate story.date 'MMMM Do YYYY'}}</span>
  {{{story.body}}}
         </div>
      </div>
@@ -11,8 +11,7 @@
      <div class="col s12 m4">
         <div class="card center-align">
         <div class="card-content">
-        <span class="card-title">{{story.user.firstName}} {{story.user.lastName}}</span>   
-        <img src="{{story.user.image}}" class="circle responsive-img">
+        <span class="card-title">{{story.user.firstName}} {{story.user.lastName}}</span>  <img src="{{story.user.image}}" class="circle responsive-img">
         </div>
         <div class="card-action">
             <a href="/stories/user/{{story.user.id}}">More From {{story.user.firstName}}</a>
