--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,18 @@ main {
   font-size:25px;
 }
 
+.story-text {
+  height: 120px;
+}
+
 footer{
   margin-top:20px;
+}
+
+.dash-status {
+  text-transform: capitalize;
+}
+
+#delete-form{
+  display:inline;
 }
