--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -13,7 +13,7 @@
  <tbody>
 {{#each stories}}
 <tr>
- <td><a href="/stories/show/{{id}}">{{title}}></a></td>
+ <td><a href="/stories/show/{{id}}">{{title}}</a></td>
  <td>{{formatDate data 'MMMM do YYYY'}}</td>
  <td><span class="dash-status">{{status}}</span></td>
  <td><a class="btn left-align" href="/stories/edit/{{id}}"><i class="fa fa-pencil"></i> Edit</a>
