--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -1,4 +1,4 @@
-<nav class="indigo darken-1">
+<nav class="indigo lighten-1">
   <div class="container">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center">StoryBooks</a>
