--- a/views/stories/edit.handlebars
+++ b/views/stories/edit.handlebars
@@ -1,7 +1,7 @@
 <h1>Edit Story</h1>
 <div class="row">
   <form action="/stories/{{story.id}}?_method=PUT" method="post" class="col s12">
-  <input type="hidden" name="_method" value="PUT">
+    <input type="hidden" name="_method" value="PUT">
     <div class="row">
       <div class="input-field">
         <input type="text" name="title" value="{{story.title}}">
@@ -12,10 +12,10 @@
     <div class="row">
       <div class="input-field">
         <select name="status">
-            {{#select story.status}}
-          <option value="public" selected>Public</option>
-          <option value="private">Private</option>
-          <option value="unpublished">Unpublished</option>
+          {{#select story.status}}
+            <option value="public" selected>Public</option>
+            <option value="private">Private</option>
+            <option value="unpublished">Unpublished</option>
           {{/select}}
         </select>
         <label for="status">Status</label>
@@ -24,7 +24,7 @@
 
     <div class="row">
       <p>
-        <input type="checkbox" name="allowComments" class="filled-in" id="filled-in-box" {{#if story.allowComments}} checked="checked"> {{/if}}
+        <input type="checkbox" name="allowComments" class="filled-in" id="filled-in-box" {{#if story.allowComments}} checked="checked" {{/if}}>
         <label for="filled-in-box">Allow Comments</label>
       </p>
     </div>
@@ -36,6 +36,6 @@
       </div>
     </div>
 
-    <input type="submit" value="save" class="btn">
+    <input type="submit" value="Save" class="btn">
   </form>
 </div>
